--- a/metadata.yaml
+++ b/metadata.yaml
@@ -35,6 +35,7 @@ subjects:
 - !lcc 'BX'
 - !lcsh 'Dupont, Jacob, 1755-1813'
 - !lcsh 'French -- England -- History -- 18th century'
+- GITenberg
 title: "Considerations on Religion and Public Education\r\nWith remarks on the speech\
   \ of M. Dupont delivered in the National Convention of France, together with an\
   \ address to the ladies, &c. of Great Britain and Ireland"
